# CivMatchup

./: README.md  data.csv  data_w_religious_2.csv  matchup.py  pyproject.toml  run.ps1
