[tool.poetry]
name = "civmatchup"
version = "0.1.0"
description = ""
authors = ["Bernie Conrad <root@bernstern.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pywinauto = "^0.6.8"
pynput = "^1.7.6"
pydirectinput = "^1.0.4"
tqdm = "^4.65.0"
keras-ocr = "^0.9.2"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "~2.10"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
